feat: Alteração das cores dos textos e do nome do app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="src/assets/icons/logoIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>G A C</title>
+    <title>UniHoras</title>
     <link rel="stylesheet" href="./src/global/styles/styles.css">
   </head>
   <body>
